<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for the editor -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context=".EditorActivity">

        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_overview"/>

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_item_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_item_name"
                    android:inputType="textCapWords"/>

                <!-- Description field -->
                <EditText
                    android:id="@+id/edit_item_description"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_item_description"
                    android:inputType="textCapWords"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Status category -->
        <LinearLayout
            android:id="@+id/container_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_status"/>

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Status drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_status"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Price category -->
        <LinearLayout
            android:id="@+id/container_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="Price"/>

            <!-- Input fields -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_item_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/price"
                    android:inputType="numberDecimal"/>

            </RelativeLayout>

        </LinearLayout>

        <!-- Quantity category -->
        <LinearLayout
            android:id="@+id/container_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_quantity"/>

            <!-- Input fields -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Quantity field -->
                <EditText
                    android:id="@+id/edit_item_quantity"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_item_quantity"
                    android:inputType="number"/>

            </RelativeLayout>
        </LinearLayout>

        !-- Manufacturer category -->

        <LinearLayout
            android:id="@+id/container_manufacturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/manufacturer_label"/>

            <!-- Input fields -->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Image field -->
                <EditText
                    android:id="@+id/edit_item_manufacturer"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/manufacturer_label"
                    android:inputType="text"/>

            </RelativeLayout>

        </LinearLayout>

        !-- Image category -->

        <LinearLayout
            android:id="@+id/container_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/image_label"/>

            !-- Image field -->

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_item_image"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/image_label"
                    android:inputType="text"/>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/select_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:text="Select Image"/>

            <ImageView
                android:id="@+id/image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:layout_toEndOf="@+id/select_image"
                android:layout_toRightOf="@+id/select_image"
                android:scaleType="centerCrop"/>

        </LinearLayout>

        !-- Sales and Order Buttons category -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saleButtonEditor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sale"/>

            <Button
                android:id="@+id/receiveButtonEditor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Receive Product"/>

            <Button
                android:id="@+id/orderButtonEditor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Order"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>